tooling/nargo_cli/tests/snapshots/execution_success/conditional_regression_underflow/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 8
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "361444214588792908": {
        "error_kind": "string",
        "string": "attempt to multiply with overflow"
      },
      "1998584279744703196": {
        "error_kind": "string",
        "string": "attempt to subtract with overflow"
      },
      "14990209321349310352": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _9",
    "private parameters indices : [_0]",
    "public parameters indices : []",
    "return value indices : []",
    "BLACKBOX::RANGE [(_0, 8)] []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) -10 ]], outputs: [_1]",
    "EXPR [ (1, _0, _1) (-10, _1) (1, _2) -1 ]",
    "EXPR [ (1, _0, _2) (-10, _2) 0 ]",
    "EXPR [ (1, _0, _2) (255, _2) (-1, _3) 0 ]",
    "BLACKBOX::RANGE [(_3, 8)] []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) -128 ]], outputs: [_4]",
    "EXPR [ (1, _0, _4) (-128, _4) (1, _5) -1 ]",
    "EXPR [ (1, _0, _5) (-128, _5) 0 ]",
    "EXPR [ (3, _0, _5) (-1, _6) 0 ]",
    "BLACKBOX::RANGE [(_6, 8)] []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) -7 ]], outputs: [_7]",
    "EXPR [ (1, _0, _7) (-7, _7) (1, _8) -1 ]",
    "EXPR [ (1, _0, _8) (-7, _8) 0 ]",
    "EXPR [ (1, _0, _8) (-8, _8) (-1, _9) 0 ]",
    "BLACKBOX::RANGE [(_9, 8)] []",
    "unconstrained func 0",
    "[Const { destination: Direct(21), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(20), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(21), offset_address: Direct(20) }, Const { destination: Direct(2), bit_size: Field, value: 0 }, BinaryFieldOp { destination: Direct(3), op: Equals, lhs: Direct(0), rhs: Direct(2) }, JumpIf { condition: Direct(3), location: 8 }, Const { destination: Direct(1), bit_size: Field, value: 1 }, BinaryFieldOp { destination: Direct(0), op: Div, lhs: Direct(1), rhs: Direct(0) }, Stop { return_data: HeapVector { pointer: Direct(20), size: Direct(21) } }]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "names": [
    "main"
  ],
  "brillig_names": [
    "directive_invert"
  ]
}
