tooling/nargo_cli/tests/snapshots/execution_success/conditional_regression_underflow/execute__tests__force_brillig_false_inliner_9223372036854775807_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
warning: Unused expression result of type u8
  ┌─ src/main.nr:4:9
  │
4 │         x + 255;
  │         -------
  │

warning: Unused expression result of type u8
  ┌─ src/main.nr:7:9
  │
7 │         x << 7;
  │         ------
  │

warning: Unused expression result of type u8
   ┌─ src/main.nr:10:9
   │
10 │         x * 3;
   │         -----
   │

warning: Unused expression result of type u8
   ┌─ src/main.nr:13:9
   │
13 │         x - 8;
   │         -----
   │
